<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TicketBookingActivity.TicketBookingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <TextView
        android:id="@+id/tv_booking_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/booked_ticket_text" />

    <TextView
        android:id="@+id/tv_seat_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_gravity="start"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/seat_num" />

    <TextView
        android:id="@+id/tv_seat_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/seat_class" />

    <TextView
        android:id="@+id/tv_seat_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/ticket_price" />

    <TextView
        android:id="@+id/tv_ticket_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/ticket_customer" />

    <TextView
        android:id="@+id/tv_ticket_customer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/ticket_customer_address" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/red"/>

    <!-- just joke of course !-->

    <LinearLayout
        android:id="@+id/card_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/enter_card_num" />

            <EditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16"
                android:hint="@string/card_format" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/enter_cvv" />

            <EditText
                android:id="@+id/et_cvv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/cvv_format"
                android:maxLength="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/enter_pin" />

            <EditText
                android:id="@+id/et_pin_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/pin_format"
                android:maxLength="4" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/book_ticket_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:text="@string/book_ticket_btn" />

    </RelativeLayout>

</LinearLayout>