<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity.ui.LoginFragment.LoginFragment">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/login_signUp_btn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_loginSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/toggling_btn_login"
        android:focusable="true" />


</LinearLayout>