<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RaceAddActivity.RaceAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/race_add_edit_text_margin_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route_add"
                    android:textColor="@color/race_text_color"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/departure_destination_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/race_add_edit_text_margin_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/race_name_add"
                    android:textColor="@color/race_text_color"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_race"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/race_name_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/race_add_edit_text_margin_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/race_departure_date_add"
                    android:textColor="@color/race_text_color"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_departure_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="10"
                    android:hint="@string/race_departure_date_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/race_add_edit_text_margin_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_time_add"
                    android:textColor="@color/race_text_color"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_departure_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="5"
                    android:hint="@string/departure_time_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/race_add_edit_text_margin_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival_time_add"
                    android:textColor="@color/race_text_color"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_arrival_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="5"
                    android:hint="@string/arrival_time_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/race_add_edit_text_margin_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ordinary_ticket_price" />
                <EditText
                    android:id="@+id/et_ordinary_ticket_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_hint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/race_add_edit_text_margin_top"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/expensive_ticket_price" />
                <EditText
                    android:id="@+id/et_expensive_ticket_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_hint"
                    android:inputType="text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/race_refresh_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/refresh_btn_text" />

            </RelativeLayout>


        </LinearLayout>

</LinearLayout>